--- a/example/scripts/install
+++ b/example/scripts/install
@@ -1,4 +1,8 @@
 #!/bin/sh -ex
 
 python -m venv venv
+
+venv/bin/pip install -U pip
 venv/bin/pip install -r requirements.txt
+
+echo "DEBUG=true" > .env
